--- a/404.html
+++ b/404.html
@@ -26,6 +26,7 @@
             GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
             LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
             CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+            Trailhead: <a class="link" href="https://trailblazer.me/id/ddronov">ddronov</a>
         </p>
 
         <br>
@@ -115,20 +116,41 @@
                     <br>
                     Mekanys
                     <br>
-                    Position - Salesforce developer
+                    Position - Salesforce Developer
+                    <br>
+                    Description: I have been using so much Salesforce front-end and back-end 
+                    Technologies to create different kind of organization components.
+                    I have been using Apex programming language a lot. I've been 
+                    writing <b>Clear</b> and <b>Optimized</b> code using best practices.
+                    Also, I've been creating data models for Salesforce organizations,
+                    using different kinds of built-in business automatization tools.
                 </p>
             </div>
         </div>
 
         <br>
         <h5><strong>SKILLS</strong></h5>
-        <h2><span class="badge badge-success">C</span>
-            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, Nlohmann/json, Meson)</span>
+        <h2>
+            <span class="badge badge-dark">
+                Salesforce Certified Administrator
+                <img class="certificate" src="src/Administrator.png">
+            </span>
+        </h2>
+        <h2>
+            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL, SOSL)</span>
+        </h2>
+        <h2>
+            <span class="badge badge-success">C</span>
+            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, cJSON, Nlohmann/json, Meson)</span>
             <span class="badge badge-success">git</span>
         </h2>
-        <h3><span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
-            <span class="badge badge-primary">Salesforce(Apex, SOQL, SOSL)</span>
-            <span class="badge badge-primary">Windows</span>
+        <h3>
+            <span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
+            <span class="badge badge-primary">JavaScript</span>
+        </h3>
+        <h3>
+            <span class="badge badge-warning">MacOS</span>
+            <span class="badge badge-warning">Windows</span>
             <span class="badge badge-warning">🐧 Linux</span>
         </h3>
         <h4>
