--- a/ru/index.html
+++ b/ru/index.html
@@ -4,45 +4,57 @@
 <head>
     <meta charset="utf-8" lang="en">
     <title>Dmitrii Dronov</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
     <div class="container">
-        <h1 style="margin-top: 5%;"><img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
+        <h1 style="margin-top: 5%;"><img
+                src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4"
+                class="rounded-circle" height="100" width="100"> Dmitrii <strong>Dronov</strong></h1>
         <hr style="color: black;">
         <p>
-            Chisinau&nbsp;MD-2020 | 
-            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
-            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            Chisinau&nbsp;MD-2020 |
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> |
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> |
             GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
             LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
             CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
+            Trailhead: <a class="link" href="https://trailblazer.me/id/ddronov">ddronov</a>
         </p>
-        
+
         <br>
         <h5><strong>ОБО МНЕ</strong></h5>
         <p><b>2 года опыта</b> разработки программного обеспечения на C, C++ и Python.<br>
             <b>Коммуникабельная</b> личность.<br>
-            Стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br></p>
+            Стараюсь <b>помогать другим людям</b> и обучать не только себя, но и их.<br>
+        </p>
 
         <br>
         <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
         <dev class="row">
             <dev class="col-lg-6">
                 <h6>2017 — 2021</h6>
-            <p>
-                Moldova, Chisinau
-                <br>
-                CEEE (Образовательный Центр Энергетики и Электроники)
-                <br>
-                61110 — Calculatoare (Компьютеры)
-            </p>
+                <p>
+                    Moldova, Chisinau
+                    <br>
+                    CEEE (Образовательный Центр Энергетики и Электроники)
+                    <br>
+                    61110 — Calculatoare (Компьютеры)
+                </p>
             </dev>
             <dev class="col-lg-6">
                 <h6>2020 - н.в.</h6>
@@ -52,7 +64,7 @@
                     TUM (Технологический Университет Молдовы)
                     <br>
                     Информационные Технологии
-            </p>
+                </p>
             </dev>
         </dev>
 
@@ -100,8 +112,8 @@
                     <br>
                     Описание: Стажировка от колледжа. Моя задача заключалась в том,
                     чтобы сделать статический веб-сайт, который я буду использовать
-                    для дипломного проекта. 
-                    Проект может быть найден тут: <a class="link" href="https://electroglob.org/">electroglob.org</a> 
+                    для дипломного проекта.
+                    Проект может быть найден тут: <a class="link" href="https://electroglob.org/">electroglob.org</a>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -111,18 +123,40 @@
                     Mekanys
                     <br>
                     Должность - Разработчик Salesforce
+                    <br>
+                    Описание: Я использую Salesforce front-end и back-end Технологии
+                    для создания разного рода компонентов для организаций.
+                    Я много использую язык программирования Apex. Я пишу <b>Чистый</b> и 
+                    <b>Оптимизированный</b> код, используя лучшие практики написания программного обеспечения.
+                    Так же я создаю модели данных для Salesforce организаций и использую разного рода
+                    инструменты автоматизации бизнеса, включенных в Salesforce.
                 </p>
             </div>
         </div>
 
+        <br>
         <h5><strong>НАВЫКИ</strong></h5>
-        <h2><span class="badge badge-success">C</span>
-            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, Nlohmann/json, Meson)</span>
+        <h2>
+            <span class="badge badge-dark">
+                Salesforce Certified Administrator
+                <img class="certificate" src="../src/Administrator.png">
+            </span>
+        </h2>
+        <h2>
+            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL, SOSL)</span>
+        </h2>
+        <h2>
+            <span class="badge badge-success">C</span>
+            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, cJSON, Nlohmann/json, Meson)</span>
             <span class="badge badge-success">git</span>
         </h2>
-        <h3><span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
-            <span class="badge badge-primary">Salesforce(Apex, SOQL, SOSL)</span>
-            <span class="badge badge-primary">Windows</span>
+        <h3>
+            <span class="badge badge-primary">🐍 Python3 (Django, asyncio)</span>
+            <span class="badge badge-primary">JavaScript</span>
+        </h3>
+        <h3>
+            <span class="badge badge-warning">MacOS</span>
+            <span class="badge badge-warning">Windows</span>
             <span class="badge badge-warning">🐧 Linux</span>
         </h3>
         <h4>
