Changed a path to stylesheets

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link href="./style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
@@ -90,7 +90,7 @@
                     <br>
                     Position - Software developer
                     <br>
-                    Description: 3 months I have worked as a C++ software developer.
+                    Description: For 3 months I have worked as a C++ software developer.
                     My task was to translate a Python application into C++.
                     Later I have worked as a Python developer for another 3 months.
                     Almost every task was network programming.
@@ -105,7 +105,7 @@
                     Position - Front-end Web Developer
                     <br>
                     Description: College internship. My task was to create a
-                    static web-site for diploma project. 
+                    static web-site for a diploma project. 
                     This project can be found at: 
                     <a class="link" href="https://electroglob.org/">electroglob.org</a> 
                 </p>
@@ -119,11 +119,11 @@
                     Position - Salesforce Developer
                     <br>
                     Description: I have been using so much Salesforce front-end and back-end 
-                    Technologies to create different kind of organization components.
-                    I have been using Apex programming language a lot. I've been 
+                    Technologies to create different kinds of organization components.
+                    I have been using the Apex programming language a lot. I've been 
                     writing <b>Clear</b> and <b>Optimized</b> code using best practices.
-                    Also, I've been creating data models for Salesforce organizations,
-                    using different kinds of built-in business automatization tools.
+                    Also, I've been creating data models for Salesforce organizations and
+                    I've been using different kinds of built-in business automatization tools.
                 </p>
             </div>
         </div>
