CV: added more info in experience

--- a/ru/404.html
+++ b/ru/404.html
@@ -89,24 +89,28 @@
         <h5><strong>ОПЫТ</strong></h5>
         <div class="row">
             <div class="col-lg-4">
-                <h6>July 2020 - December 2020</h6>
+                <h6>August 2021 - Until now</h6>
                 <p>Moldova, Chisinau
                     <br>
-                    SmartSoftDev
+                    <a href="https://www.mekanys.com/web/main.php">Mekanys</a>
                     <br>
-                    Должность - Разработчик программного обеспечения
+                    Должность - Разработчик Salesforce
                     <br>
-                    Описание: 3 месяца я работал C++ разработчиком.
-                    Моя задача заключалась в том, чтобы перевести Python приложения на C++.
-                    Позже я работал Python разработчиком на протяжении следующих 3-х месяцев.
-                    Практически каждая задача была связана с сетевым программированием.
+                    Описание: Я использую Salesforce front-end и back-end Технологии
+                    для создания разного рода компонентов для организаций.
+                    Я много использую язык программирования Apex. Я пишу <b>Чистый</b> и 
+                    <b>Оптимизированный</b> код, используя лучшие практики написания программного обеспечения.
+                    Так же я создаю модели данных для Salesforce организаций и использую разного рода
+                    инструменты автоматизации бизнеса, включенных в Salesforce.
+                    Работая в Mekanys, я работал на проектах для <a href="https://www.livit.ch/en">Livit</a> 
+                    и <a href="https://biontech.de/">BioNTech</a>.
                 </p>
             </div>
             <div class="col-lg-4">
                 <h6>May 2021 - June 2021</h6>
                 <p>Moldova, Chisinau
                     <br>
-                    Electroglob
+                    <a href="https://electroglob.org/">Electroglob</a>
                     <br>
                     Должность - Front-end веб разработчик
                     <br>
@@ -117,19 +121,18 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h6>August 2021 - Until now</h6>
+                <h6>July 2020 - December 2020</h6>
                 <p>Moldova, Chisinau
                     <br>
-                    Mekanys
+                    <a href="https://smartsoftdev.eu/">SmartSoftDev</a>
                     <br>
-                    Должность - Разработчик Salesforce
+                    Должность - Разработчик программного обеспечения
                     <br>
-                    Описание: Я использую Salesforce front-end и back-end Технологии
-                    для создания разного рода компонентов для организаций.
-                    Я много использую язык программирования Apex. Я пишу <b>Чистый</b> и 
-                    <b>Оптимизированный</b> код, используя лучшие практики написания программного обеспечения.
-                    Так же я создаю модели данных для Salesforce организаций и использую разного рода
-                    инструменты автоматизации бизнеса, включенных в Salesforce.
+                    Описание: 3 месяца я работал C++ разработчиком.
+                    Моя задача заключалась в том, чтобы перевести Python приложения на C++.
+                    Позже я работал Python разработчиком на протяжении следующих 3-х месяцев.
+                    Практически каждая задача была связана с сетевым программированием.
+                    Работая в SmartSoftDev, я работал на проекте для <a href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>.
                 </p>
             </div>
         </div>
