--- a/index.html
+++ b/index.html
@@ -83,24 +83,28 @@
         <h5><strong>EXPERIENCE</strong></h5>
         <div class="row">
             <div class="col-lg-4">
-                <h6>July 2020 - December 2020</h6>
+                <h6>August 2021 - Until now</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
-                    SmartSoftDev
+                    <a href="https://www.mekanys.com/web/main.php">Mekanys</a>
                     <br>
-                    Position - Software developer
+                    Position - Salesforce Developer
                     <br>
-                    Description: For 3 months I have worked as a C++ software developer.
-                    My task was to translate a Python application into C++.
-                    Later I have worked as a Python developer for another 3 months.
-                    Almost every task was network programming.
+                    Description: I have been using so much Salesforce front-end and back-end 
+                    Technologies to create different kinds of organization components.
+                    I have been using the Apex programming language a lot. I've been 
+                    writing <b>Clear</b> and <b>Optimized</b> code using best practices.
+                    Also, I've been creating data models for Salesforce organizations and
+                    I've been using different kinds of built-in business automatization tools.
+                    While working at Mekanys, I was working on projects for <a href="https://www.livit.ch/en">Livit</a> 
+                    and <a href="https://biontech.de/">BioNTech</a>.
                 </p>
             </div>
             <div class="col-lg-4">
                 <h6>May 2021 - June 2021</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
-                    Electroglob
+                    <a href="https://electroglob.org/">Electroglob</a>
                     <br>
                     Position - Front-end Web Developer
                     <br>
@@ -111,19 +115,18 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h6>August 2021 - Until now</h6>
+                <h6>July 2020 - December 2020</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
-                    Mekanys
+                    <a href="https://smartsoftdev.eu/">SmartSoftDev</a>
                     <br>
-                    Position - Salesforce Developer
+                    Position - Software developer
                     <br>
-                    Description: I have been using so much Salesforce front-end and back-end 
-                    Technologies to create different kinds of organization components.
-                    I have been using the Apex programming language a lot. I've been 
-                    writing <b>Clear</b> and <b>Optimized</b> code using best practices.
-                    Also, I've been creating data models for Salesforce organizations and
-                    I've been using different kinds of built-in business automatization tools.
+                    Description: For 3 months I have worked as a C++ software developer.
+                    My task was to translate a Python application into C++.
+                    Later I have worked as a Python developer for another 3 months.
+                    Almost every task was network programming.
+                    While working at SmartSoftDev, I was working on project for <a href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>.
                 </p>
             </div>
         </div>
