--- a/ru/index.html
+++ b/ru/index.html
@@ -89,7 +89,7 @@
         <h5><strong>ОПЫТ</strong></h5>
         <div class="row">
             <div class="col-lg-4">
-                <h6>August 2021 - Until now</h6>
+                <h6>Август 2021 - Настоящее время</h6>
                 <p>Moldova, Chisinau
                     <br>
                     <a href="https://www.mekanys.com/web/main.php">Mekanys</a>
@@ -107,7 +107,7 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h6>May 2021 - June 2021</h6>
+                <h6>Май 2021 - Июнь 2021</h6>
                 <p>Moldova, Chisinau
                     <br>
                     <a href="https://electroglob.org/">Electroglob</a>
@@ -121,7 +121,7 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h6>July 2020 - December 2020</h6>
+                <h6>Июль 2020 - Декабрь 2020</h6>
                 <p>Moldova, Chisinau
                     <br>
                     <a href="https://smartsoftdev.eu/">SmartSoftDev</a>
