--- a/404.html
+++ b/404.html
@@ -4,25 +4,34 @@
 <head>
     <meta charset="utf-8" lang="en">
     <title>Dmitrii Dronov</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Mono&display=swap"
+        rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body style="font-family: 'Montserrat', sans-serif;">
     <div class="container">
         <h1 style="margin-top: 5%;">
-            <img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4" class="rounded-circle" height="100" width="100"> 
+            <img src="https://avatars3.githubusercontent.com/u/55624814?s=460&u=e4c36df0a095b303193d859fcf13eea54f53f626&v=4"
+                class="rounded-circle" height="100" width="100">
             Dmitrii <strong>Dronov</strong>
         </h1>
         <hr style="color: black;">
         <p>
-            Chisinau&nbsp;MD-2020 | 
-            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> | 
-            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> | 
+            Chisinau&nbsp;MD-2020 |
+            <a class="link" href="tel:+373-78-47-55-39">+373&nbsp;78&nbsp;475539</a> |
+            <a class="link" href="mailto:dronov@nuton.org">dronov@nuton.org</a> |
             GitHub:&nbsp;<a class="link" href="https://github.com/BATK0VICH">BATK0VICH</a> |
             LinkedIn: <a class="link" href="https://www.linkedin.com/in/dmitrii-dronov/">Dmitrii Dronov</a> |
             CodeWars: <a class="link" href="https://www.codewars.com/users/BATK0VICH">BATK0VICH</a>
@@ -31,23 +40,13 @@
 
         <br>
         <h5><strong>SUMMARY</strong></h5>
-        <p>Software engineer with <b>2 years of experience</b> in C, C++ and Python.<br>
+        <p>Software engineer with <b>3+ years of experience</b> in Salesforce, C/C++ and Python.<br>
             I'm a <b>communicative</b> person.<br>
             I always try to <b>help other people</b> and teach them, not just myself.</p>
         <br>
 
         <h5><strong>EDUCATION</strong></h5>
         <div class="row">
-            <div class="col-lg-6">
-                <h6>2017 — 2021</h6>
-                <p>
-                    Location: Moldova, Chisinau
-                    <br>
-                    CEEE (Center of Excellence in Energetics and Electronics)
-                    <br>
-                    61110 — Computers
-                </p>
-            </div>
             <div class="col-lg-6">
                 <h6>2020 - Until now</h6>
                 <p>
@@ -56,6 +55,16 @@
                     TUM (Technical University of Moldova)
                     <br>
                     Information Technology
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <h6>2017 — 2021</h6>
+                <p>
+                    Location: Moldova, Chisinau
+                    <br>
+                    CEEE (Center of Excellence in Energetics and Electronics)
+                    <br>
+                    61110 — Computers
                 </p>
             </div>
         </div>
@@ -83,21 +92,41 @@
         <h5><strong>EXPERIENCE</strong></h5>
         <div class="row">
             <div class="col-lg-4">
-                <h6>August 2021 - Until now</h6>
+                <h6>August 2019 - Until now</h6>
                 <p>Location: Moldova, Chisinau
                     <br>
                     <a href="https://www.mekanys.com/web/main.php">Mekanys</a>
                     <br>
                     Position - Salesforce Developer
                     <br>
-                    Description: I have been using so much Salesforce front-end and back-end 
+                    Description: I have been using so much Salesforce front-end and back-end
                     Technologies to create different kinds of organization components.
-                    I have been using the Apex programming language a lot. I've been 
+                    I have been using the Apex programming language a lot. I've been
                     writing <b>Clear</b> and <b>Optimized</b> code using best practices.
                     Also, I've been creating data models for Salesforce organizations and
                     I've been using different kinds of built-in business automatization tools.
-                    While working at Mekanys, I was working on projects for <a href="https://www.livit.ch/en">Livit</a> 
-                    and <a href="https://biontech.de/">BioNTech</a>.
+                    While working at Mekanys, I was working on projects for:
+                <ul>
+                    <li>
+                        <a href="https://www.livit.ch/en">Livit(Real Estate Company)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.biontech.com/">BioNTech SE(Biotechnology company)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.skylinegroupofcompanies.ca/">Skyline Group of Companies(Investment
+                            Management Organizations)</a>
+                    </li>
+                    <li>
+                        <a href="https://agmrenovations.com/">AGM Renovations(Canadian Service Provider)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.sheridancollege.ca/">Sheridan College(Canadian College)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.littlekickers.co.uk/">Little Kickers(Sports company)</a>
+                    </li>
+                </ul>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -109,9 +138,9 @@
                     Position - Front-end Web Developer
                     <br>
                     Description: College internship. My task was to create a
-                    static web-site for a diploma project. 
-                    This project can be found at: 
-                    <a class="link" href="https://electroglob.org/">electroglob.org</a> 
+                    static web-site for a diploma project.
+                    This project can be found at:
+                    <a class="link" href="https://electroglob.org/">electroglob.org</a>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -126,7 +155,8 @@
                     My task was to translate a Python application into C++.
                     Later I have worked as a Python developer for another 3 months.
                     Almost every task was network programming.
-                    While working at SmartSoftDev, I was working on project for <a href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>.
+                    While working at SmartSoftDev, I was working on project for <a
+                        href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>.
                 </p>
             </div>
         </div>
@@ -140,7 +170,8 @@
             </span>
         </h2>
         <h2>
-            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL, SOSL)</span>
+            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL, SOSL, Sales Cloud, Service
+                Cloud)</span>
         </h2>
         <h2>
             <span class="badge badge-success">C</span>
