--- a/ru/index.html
+++ b/ru/index.html
@@ -45,18 +45,8 @@
 
         <br>
         <h5><strong>ОБРАЗОВАНИЕ</strong></h5>
-        <dev class="row">
-            <dev class="col-lg-6">
-                <h6>2017 — 2021</h6>
-                <p>
-                    Moldova, Chisinau
-                    <br>
-                    CEEE (Образовательный Центр Энергетики и Электроники)
-                    <br>
-                    61110 — Calculatoare (Компьютеры)
-                </p>
-            </dev>
-            <dev class="col-lg-6">
+        <div class="row">
+            <div class="col-lg-6">
                 <h6>2020 - н.в.</h6>
                 <p>
                     Moldova, Chisinau
@@ -65,31 +55,41 @@
                     <br>
                     Информационные Технологии
                 </p>
-            </dev>
-        </dev>
+            </div>
+            <div class="col-lg-6">
+                <h6>2017 — 2021</h6>
+                <p>
+                    Moldova, Chisinau
+                    <br>
+                    CEEE (Образовательный Центр Энергетики и Электроники)
+                    <br>
+                    61110 — Calculatoare (Компьютеры)
+                </p>
+            </div>
+        </div>
 
         <br>
         <h5><strong>ЯЗЫКИ</strong></h5>
-        <dev class="row">
-            <dev class="col-lg-4">
+        <div class="row">
+            <div class="col-lg-4">
                 <h6>Английский</h6>
                 <p>Уровень: B2<br>TOEFL iBT балл: 93<br></p>
-            </dev>
-            <dev class="col-lg-4">
+            </div>
+            <div class="col-lg-4">
                 <h6>Русский<br></h6>
                 <p>Родной язык<br></p>
-            </dev>
-            <dev class="col-lg-4">
+            </div>
+            <div class="col-lg-4">
                 <h6>Румынский</h6>
                 <p>Уровень: A3<br></p><br>
-            </dev>
-        </dev>
+            </div>
+        </div>
 
 
         <h5><strong>ОПЫТ</strong></h5>
         <div class="row">
             <div class="col-lg-4">
-                <h6>Август 2021 - Настоящее время</h6>
+                <h6>Август 2019 - Настоящее время</h6>
                 <p>Moldova, Chisinau
                     <br>
                     <a href="https://www.mekanys.com/web/main.php">Mekanys</a>
@@ -98,12 +98,39 @@
                     <br>
                     Описание: Я использую Salesforce front-end и back-end Технологии
                     для создания разного рода компонентов для организаций.
-                    Я много использую язык программирования Apex. Я пишу <b>Чистый</b> и 
-                    <b>Оптимизированный</b> код, используя лучшие практики написания программного обеспечения.
-                    Так же я создаю модели данных для Salesforce организаций и использую разного рода
+                    Я много использую язык программирования Apex. Я пишу <b>Чистый</b> и
+                    <b>Оптимизированный</b> код, используя лучшие практики написания
+                    программного обеспечения.
+                    Так же я создаю модели данных для Salesforce организаций и использую
+                    разного рода
                     инструменты автоматизации бизнеса, включенных в Salesforce.
-                    Работая в Mekanys, я работал на проектах для <a href="https://www.livit.ch/en">Livit</a> 
-                    и <a href="https://biontech.de/">BioNTech</a>.
+                    Работая в Mekanys, я работал на проектах для:
+                <ul>
+                    <li>
+                        <a href="https://www.livit.ch/en">Livit(Агентство недвижимости)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.biontech.com/">BioNTech SE(Биотехнологическая
+                            компания)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.skylinegroupofcompanies.ca/">Skyline Group of
+                            Companies(Организации по
+                            управлению инвестициями)</a>
+                    </li>
+                    <li>
+                        <a href="https://agmrenovations.com/">AGM Renovations(Канадский
+                            поставщик услуг)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.sheridancollege.ca/">Sheridan College(Канадский
+                            колледж)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.littlekickers.co.uk/">Little Kickers(Спортивная
+                            компания)</a>
+                    </li>
+                </ul>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -130,9 +157,12 @@
                     <br>
                     Описание: 3 месяца я работал C++ разработчиком.
                     Моя задача заключалась в том, чтобы перевести Python приложения на C++.
-                    Позже я работал Python разработчиком на протяжении следующих 3-х месяцев.
+                    Позже я работал Python разработчиком на протяжении следующих 3-х
+                    месяцев.
                     Практически каждая задача была связана с сетевым программированием.
-                    Работая в SmartSoftDev, я работал на проекте для <a href="https://www.fresenius.com/fresenius-medical-care">Fresenius Medical Care</a>.
+                    Работая в SmartSoftDev, я работал на проекте для <a
+                        href="https://www.fresenius.com/fresenius-medical-care">Fresenius
+                        Medical Care</a>.
                 </p>
             </div>
         </div>
@@ -146,11 +176,13 @@
             </span>
         </h2>
         <h2>
-            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL, SOSL)</span>
+            <span class="badge badge-light">Salesforce(Apex, Aura, LWC, VisualForce, SOQL,
+                SOSL)</span>
         </h2>
         <h2>
             <span class="badge badge-success">C</span>
-            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, cJSON, Nlohmann/json, Meson)</span>
+            <span class="badge badge-success">C++ (STL, SDL, Boost, Asio, glog, cJSON,
+                Nlohmann/json, Meson)</span>
             <span class="badge badge-success">git</span>
         </h2>
         <h3>
