moved JS to front-end skills

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <div class="container">
             <h5><strong>SUMMARY</strong></h5>
             <p class="justified">
-                I'm a senior software developer with <b>over three years</b> of 
+                I'm a senior software developer with <b>over three years</b> of
                 hands-on experience in <b>Salesforce, C/C++, and Python.</b> <br>
-                I'm not just passionate about software development, 
+                I'm not just passionate about software development,
                 but also about <b>connecting with people.</b> <br>
-                Being a <b>communicative person,</b> 
-                I enjoy <b>helping and teaching others,</b> 
+                Being a <b>communicative person,</b>
+                I enjoy <b>helping and teaching others,</b>
                 not just focusing on my own growth. <br>
                 <b>Let's collaborate and create some amazing tech solutions together!</b>
             </p>
@@ -105,6 +105,15 @@
                         <li class="list-inline-item">asyncio</li>
                     </ul>
                 </span>
+            </h6>
+            <h6>
+                <span class="badge badge-light">SQL</span>
+                <span class="badge badge-light">SQLite3</span>
+                <span class="badge badge-light">MongoDB</span>
+            </h6>
+
+            <h6><strong>Front-End development</strong></h6>
+            <h6>
                 <span class="badge badge-light">JavaScript
                     <ul class="list-inline" style="margin-bottom: 0;">
                         <li class="list-inline-item">LWC</li>
@@ -112,17 +121,9 @@
                         <li class="list-inline-item">React</li>
                     </ul>
                 </span>
-            </h6>
-            <h6>
-                <span class="badge badge-light" >SQL</span>
-                <span class="badge badge-light" >SQLite3</span>
-                <span class="badge badge-light" >MongoDB</span>
-            </h6>
-
-            <h6><strong>Front-End development</strong></h6>
-            <h6><span class="badge badge-light" >HTML</span>
-                <span class="badge badge-light" >CSS</span>
-                <span class="badge badge-light" >Bootstrap</span>
+                <span class="badge badge-light">HTML</span>
+                <span class="badge badge-light">CSS</span>
+                <span class="badge badge-light">Bootstrap</span>
             </h6>
             <h6><strong>Operating Systems</strong></h6>
             <h6>
@@ -483,10 +484,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </body>
-
 </html>
